# CodeCoach

./: CMakeLists.txt
gui_codecoach/: CMakeLists.txt  main.cpp
gui_codecoach/components/: CoachFeedbackWidget.cpp  CoachFeedbackWidget.h  CodeEditorWidget.cpp  CodeEditorWidget.h  ProblemDetailWidget.cpp  ProblemDetailWidget.h  ProblemListWidget.cpp  ProblemListWidget.h  RunResultsWidget.cpp  RunResultsWidget.h  RunResultsWidgets.cpp  RunResultsWidgets.h
gui_codecoach/mainwindow/: MainWindow.cpp  MainWindow.h
gui_codecoach/viewmodels/: CoachViewModel.cpp  CoachViewModel.h  EditorViewModel.cpp  EditorViewModel.h  EditorViewmodel.cpp  EditorViewmodel.h  ProblemViewModel.cpp  ProblemViewModel.h  RunViewModel.cpp  RunViewModel.h
gui_codecoach/viewmodels/dto/: CoachFeedback.h  ProblemDetail.h  ProblemSummary.h  RunResults.h
lib_codecoach/: CMakeLists.txt  library.h
lib_codecoach/Mongo/: mongo_client.cpp  mongo_client.h  problem_repository.cpp  problem_repository.h
lib_codecoach/config/: config_manager.cpp  config_manager.h
lib_codecoach/contracts/: analyzer_dto.h  eval_dto.h  problem_dt.h  problem_dto.h  sandbox_contract.h
lib_codecoach/errors/: exceptions.h
lib_codecoach/http/: http_client.cpp  http_client.h  http_response.cpp  http_response.h
lib_codecoach/logging/: logger.cpp  logger.h
lib_codecoach/metrics/: timer.cpp  timer.h
lib_codecoach/prompts/: coach_prompts.cpp  coach_prompts.h  coach_promtps.cpp  coach_promtps.h
lib_codecoach/sdk/: analyzer_client.cpp  analyzer_client.h  eval_client.cpp  eval_client.h  llm_client.h  llm_client_openai.cpp  llm_client_openai.h  problems_client.cpp  problems_client.h
lib_codecoach/tests/: smoke_main.cpp
